o add m2e catalog entry o remove assembly plugin